errorlog.txt
Main.java:9: error: ';' expected
        System.out.println("String is :"+s+" \nInt is: "+i+" "+(j+1))	
                                                                     ^
1 error
